--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-personal-page",
+  "home": "https://davidtayloryangg.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
