--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-personal-page",
-  "home": "https://davidtayloryangg.github.io",
+  "home": "https://davidtayloryangg.github.io/letmeintroducemyself/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
